add: workspaceFolder/CodeC to include path

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,6 +9,8 @@
                 "-Wall",
                 "-Wextra",
                 "-g3",
+                "-I",
+                "${workspaceFolder}/codeC",
                 "${file}",
                 "-o",
                 "${fileDirname}/output/${fileBasenameNoExtension}",
